Added weekendOffset() toEditText's listener object. which fixes the due date result when the DatePicker falls on a weekend.

--- a/DueDate/trunk/.project
+++ b/DueDate/trunk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DueDate3</name>
+	<name>DueDate</name>
 	<comment></comment>
 	<projects>
 	</projects>
